--- a/ansible/roles/common/templates/gcsfuse_daemon.sh.j2
+++ b/ansible/roles/common/templates/gcsfuse_daemon.sh.j2
@@ -10,8 +10,9 @@ DAEMON_OPTS=" -limit-ops-per-sec -1 \
               -o ro \
               -stat-cache-ttl 1.0h \
               -type-cache-ttl 1.0h \
-              -temp-dir-bytes 100000000000 \
-              -gcs-chunk-size 200000000 \
+              -temp-dir /mnt/scratch/ \
+              -temp-dir-bytes 350000000000 \
+              -gcs-chunk-size 64000000 \
               $BUCKET $MOUNT_POINT"
 
 
