--- a/ansible/roles/common/templates/gcsfuse_daemon.sh.j2
+++ b/ansible/roles/common/templates/gcsfuse_daemon.sh.j2
@@ -23,7 +23,7 @@ fi
 
 start_service() {
   echo -n " * Starting $NAME... "
-  start-stop-daemon --chuid trubetsk --background -Sq -p $PIDFILE -x $DAEMON -- $DAEMON_OPTS
+  start-stop-daemon --chuid trubetsk --background -Sq -p $PIDFILE -x $DAEMON -- $DAEMON_OPTS > /var/log/gcsfuse.log 2>&1"
   e=$?
   if [ $e -eq 1 ]; then
     echo "already running"
